--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Poller</title>
+  <meta name="robots" content="noindex">
+  <title>Kiosk Nameplate</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet"> 
+  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet"> 
 </head>
 <body>
