--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="robots" content="noindex">
-  <title>Kiosk Nameplate</title>
+  <title>Pi-plate</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet"> 
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="dark">
   <app-root></app-root>
