--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="dark">
-  <app-root></app-root>
+<body>
+  <div class="dark app">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
